app/Styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html{
    box-sizing: border-box;
    font-size: 90%;
}

body {
    background-color: #0b1220;
}

@keyframes slideIn {
    0% {
        transform: translateY(20px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

.animate-slideIn {
    animation: slideIn 0.5s ease forwards;
}

.cursor-glow {
  position: fixed;
  width: 500px; 
  height: 500px;
  pointer-events: none;
  border-radius: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999;

  background: radial-gradient(
    circle,
    rgba(0, 140, 255, 0.175) 0%,
    rgba(0, 140, 255, 0.13) 25%,
    rgba(120, 0, 255, 0.12) 45%,
    rgba(120, 0, 255, 0.08) 60%,
    transparent 75%
  );

  filter: blur(100px);
  transition: transform 0.08s ease-out;
}

